fix: comments from reviewer